fix: header responsivity on mobile

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -45,7 +45,7 @@ header {
 
 @media screen and (max-width: 1024px){
   header {
-    height: 68vh;
+    padding-top: 3rem;
   }
 
   section {
@@ -54,9 +54,6 @@ header {
 }
 
 @media screen and (max-width: 600px){
-  header {
-    height: 100vh;
-  }
 
   .header__socials,
   .scroll__down {
